syntax = "proto3";

option go_package = "github.com/m25-lab/lightning-network-node/pb";

service RoutingService {
  rpc GetNodeTable(GetRoutingNodeRequest) returns (GetRoutingNodeResponse) {}
}

message GetRoutingNodeRequest {
}

message GetRoutingNodeResponse {
}
